# Archon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CRAWL4AI_UPDATE.md  Makefile  README.md  docker-compose.yml  ui-consistency-review-style-guide.md
python/: .gitignore  Dockerfile.agent-work-orders  Dockerfile.agents  Dockerfile.mcp  Dockerfile.server  E2E_TEST_RESULTS.md  pyproject.toml  test_url_resolution_fix.py
python/.claude/commands/agent-work-orders/: branch_generator.md  classifier.md  commit.md  committer.md  create-branch.md  create-pr.md  implementor.md  plan_finder.md  planner_bug.md  planner_chore.md  planner_feature.md  planning.md  pr_creator.md  prime.md  prp-review.md  start-server.md  test.md
python/src/agent_work_orders/: CLAUDE.md  README.md  __init__.py  config.py  main.py  models.py  server.py
python/src/agent_work_orders/agent_executor/: __init__.py  agent_cli_executor.py
python/src/agent_work_orders/api/: __init__.py  routes.py  sse_streams.py
python/src/agent_work_orders/command_loader/: __init__.py  claude_command_loader.py
python/src/agent_work_orders/database/: __init__.py  client.py
python/src/agent_work_orders/github_integration/: __init__.py  github_client.py
python/src/agent_work_orders/sandbox_manager/: __init__.py  git_branch_sandbox.py  git_worktree_sandbox.py  sandbox_factory.py  sandbox_protocol.py
python/src/agent_work_orders/state_manager/: __init__.py  file_state_repository.py  repository_config_repository.py  repository_factory.py  supabase_repository.py  work_order_repository.py
python/src/agent_work_orders/utils/: __init__.py  git_operations.py  id_generator.py  log_buffer.py  port_allocation.py  state_reconciliation.py  structured_logger.py  worktree_operations.py
python/src/agent_work_orders/workflow_engine/: __init__.py  agent_names.py  review_workflow.py  test_workflow.py  workflow_operations.py  workflow_orchestrator.py  workflow_phase_tracker.py
python/src/agents/: base_agent.py
python/src/mcp_server/: mcp_server.py
python/src/mcp_server/features/: feature_tools.py
python/src/mcp_server/modules/: rag_module.py
python/src/mcp_server/utils/: __init__.py  error_handling.py  http_client.py  timeout_config.py
python/src/server/: main.py
python/src/server/api_routes/: __init__.py  agent_chat_api.py  agent_work_orders_proxy.py  bug_report_api.py  knowledge_api.py  mcp_api.py  migration_api.py  ollama_api.py  openrouter_api.py  pages_api.py  progress_api.py  projects_api.py  providers_api.py  settings_api.py  version_api.py
python/src/server/config/: config.py  logfire_config.py  service_discovery.py  version.py
python/src/server/models/: progress_models.py
python/src/server/services/: client_manager.py  credential_service.py  (+7 more)
python/tests/: conftest.py  test_api_essentials.py  test_async_background_task_manager.py  test_async_credential_service.py  test_async_embedding_service.py  test_async_llm_provider_service.py  test_async_source_summary.py  test_business_logic.py  test_code_extraction_source_id.py  test_crawling_service_subdomain.py  test_discovery_service.py  test_document_storage_metrics.py  test_knowledge_api_integration.py  test_knowledge_api_pagination.py  test_llms_txt_link_following.py  test_openrouter_discovery.py  test_progress_api.py  test_rag_simple.py  test_rag_strategies.py  test_service_integration.py  test_source_id_refactor.py  test_source_race_condition.py  test_source_url_shadowing.py  test_supabase_validation.py  test_task_counts.py  test_token_optimization.py  test_token_optimization_integration.py  test_url_canonicalization.py  test_url_handler.py
python/tests/agent_work_orders/: conftest.py  pytest.ini  test_agent_executor.py  test_api.py  test_command_loader.py  test_config.py  test_github_integration.py  test_id_generator.py  test_log_buffer.py  test_models.py  test_port_allocation.py  test_repository_config_repository.py  test_sandbox_manager.py  test_server.py  test_sse_streams.py  test_state_manager.py  test_workflow_engine.py  test_workflow_operations.py  test_workflow_orchestrator.py  test_worktree_operations.py
python/tests/progress_tracking/: __init__.py  test_batch_progress_bug.py  test_progress_api.py  test_progress_mapper.py  test_progress_models.py  test_progress_tracker.py
python/tests/server/: __init__.py
(+574 files in other folders)
